style: fix section headings spacing

--- a/frontend/src/scss/layout/_index.scss
+++ b/frontend/src/scss/layout/_index.scss
@@ -14,7 +14,6 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	margin-right: 1em;
 }
 
 // on the root element
